[gd_scene load_steps=4 format=3 uid="uid://btju6stjgkyhg"]

[ext_resource type="Script" path="res://meeting/meeting.gd" id="1_nj13y"]
[ext_resource type="AudioStream" uid="uid://wdx3rohwyxaa" path="res://resources/music/meeting.ogg" id="2_ofhxy"]

[sub_resource type="GDScript" id="GDScript_38g6c"]
script/source = "extends ProgressBar


@onready var timer = $Timer


func _process(_delta):
	value = timer.time_left
"

[node name="Meeting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nj13y")

[node name="ButtonHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -206.0
grow_horizontal = 2
grow_vertical = 0

[node name="Answer" type="Button" parent="ButtonHolder"]
layout_mode = 1
offset_top = 70.0
offset_right = 568.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 26
text = "Option 1"

[node name="Answer2" type="Button" parent="ButtonHolder"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -568.0
offset_top = 70.0
offset_bottom = 126.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 26
text = "Option 2"

[node name="Answer3" type="Button" parent="ButtonHolder"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 568.0
grow_vertical = 0
theme_override_font_sizes/font_size = 26
text = "Option 3"

[node name="Answer4" type="Button" parent="ButtonHolder"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -568.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 26
text = "Option 4"

[node name="TimeLeft" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -208.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 36
max_value = 15.0
script = SubResource("GDScript_38g6c")

[node name="Question" type="Label" parent="TimeLeft"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 39
text = "Hello this is the question"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="TimeLeft"]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ofhxy")
autoplay = true
